# esp32-cam-rtsp

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  STATUS.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.ai-thinker-esp32-cam  sdkconfig.defaults.lilygo-t-camera-plus  sdkconfig.defaults.lilygo-t-display-s3  sdkconfig.defaults.olimex-esp32-poe  sdkconfig.sensor.ov2640  sdkconfig.sensor.ov5640
.agent/: CODING_GUIDELINES.md  REVIEW_GUIDELINES.md
.agent/agents/: claude-opus.md  gemma4-26b.md
.agent/skills/: 01-project-overview.md  02-repo-overview.md  03-architecture-decisions.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
boards/: ai_thinker_esp32_cam.h  lilygo_t_camera_plus.h  lilygo_t_display_s3.h  olimex_esp32_poe.h
components/app_event/: CMakeLists.txt  app_event.c
components/board_config/: CMakeLists.txt  Kconfig.projbuild
components/nvs_config/: CMakeLists.txt  nvs_config.c
components/sensor_registry/: CMakeLists.txt  Kconfig.projbuild
components/status_indicator/: CMakeLists.txt  Kconfig.projbuild  status_indicator.c
components/status_indicator/include/: status_indicator.h
docs/: architecture.md
docs/adr/: README.md  (+5 more)
include/: board.h  sensor_caps.h
partitions/: partitions_4mb_ota.csv  partitions_ota.csv
scripts/: install-hooks.ps1  pre-pr.ps1
sensors/: ov2640.h  ov5640.h
src/: CMakeLists.txt  main.c
test/: Makefile  README  test_custom_runner.py
(+45 files in other folders)
